# Skagit-IBM

./: .gitignore  ABC_test.sh  ABC_test_listings.csv  CMakeLists.txt  CONFIG_README.md  Makefile  Makefile_old  NetCDF Explorer.ipynb  OUTPUT_README.md  README.md  RELEASE_NOTES.md  config_9thread.json  config_diana.json  config_new_map_test.json  config_test_2000_map.json  config_test_2004_map.json  config_test_2013_map.json  config_test_2014_map.json  default_config_env_from_file.json  default_config_env_sim.json  env_sim.cpp  fish.cpp  map.cpp  map.h  model.cpp  output_deterministic.txt  readme_old.txt  run9_run.sh  run_debug.sh  run_diana.sh  setup.sh  test_9thread.sh  test_run_listings.csv  test_run_listings_reepicheep.csv  test_run_listings_reepicheep_template.csv  troy_run_listings_template.csv  troys_build_notes.md  util.h  variation_run.sh
data/: airTempC.csv  flowM3ps.csv  map_geometry.csv  map_metadata.txt  map_vertices.csv  sampling_nodes.csv  skagit_migrants_2006.csv  skagit_migrants_2006_feb_start.csv  skagit_migrants_2010.csv  skagit_migrants_2010_feb_start.csv  skagit_migrants_2014.csv  skagit_migrants_2014_ed.csv  skagit_migrants_2014_feb_start.csv  skagit_weekly_lengths_2006.csv  skagit_weekly_lengths_2006_feb_start.csv  skagit_weekly_lengths_2010.csv  skagit_weekly_lengths_2010_ed.csv  skagit_weekly_lengths_2014.csv  skagit_weekly_lengths_2014_ed.csv  skagit_weekly_migrants_2006.csv  skagit_weekly_migrants_2006_feb_start.csv  skagit_weekly_migrants_2010.csv  skagit_weekly_migrants_2014.csv  skagit_weekly_migrants_2014_ed.csv
data.old/: DATA_README.txt  cresTide.csv  map_geometry.csv  process_netcdf.py  recruits_sizedist.csv  sampling_sites.csv  site points for Diana.csv  site points for Diana.xlsx
data.old/Current maps/: Skagit2000_geometry.csv  Skagit2004_geometry.csv  Skagit2004_vertices.csv
data.old/Skagit2000_2004/: Skagit2000_vertices.csv  TrackPts.csv
data/Current maps/: Skagit2000_geometry.csv  Skagit2013_geometry.csv
data/Skagit2000_2004/: Skagit2000_2004.csv  Skagit2013_vertices.csv
data/maps_dec/: Skagit2000_geometry_new.csv  Skagit2000_vertices_2019_elev.csv  Skagit2004_geometry_new.csv  Skagit2004_vertices_2019_elev.csv  Skagit2013_geometry_new.csv  Skagit2013_vertices_2019_elev.csv
data/validation/: run32_seth.sh
docs/: high awareness fish movement algorithm.md
run29_config/: config_map_2000_data_2014.json  config_map_2000_data_2014_deterministic.json  map_2000_data_2014_output.txt
run6_config/: config_map_2000_data_2006.json  config_map_2000_data_2010.json  config_map_2000_data_2014.json  config_map_2004_data_2006.json  config_map_2004_data_2010.json  config_map_2004_data_2014.json  config_map_2013_data_2006.json  config_map_2013_data_2010.json  config_map_2013_data_2014.json  config_map_2013_data_2014_deterministic.json
src/: custom_exceptions.h  fish.cpp  fish.cpp.save  fish.h  fish_movement.cpp  fish_movement.h  fish_movement_downstream.cpp  fish_movement_downstream.h  fish_movement_factory.cpp  fish_movement_factory.h  fish_movement_high_awareness.cpp  fish_movement_high_awareness.h  gui.cpp  headless.cpp  hydro.cpp  hydro.h  load.cpp  load.h  load_utils.cpp  load_utils.h  map.cpp  map.h  map_gen.cpp  map_gen.h  model.cpp  model.h  model_config_map.cpp  model_config_map.h  util.cpp  util.h
src_bkp/: env_sim.h  fish.cpp  fish.h  headless.cpp  hydro.h  load.cpp  load.h  map.h  map_gen.cpp
tests/: CMakeLists.txt  fish_move_test.cpp  fish_movement_factory_test.cpp  fish_movement_high_awareness_test.cpp  fish_movement_pathfinding_test.cpp  fish_movement_test.cpp  hydro_model_test.cpp  is_missing_indicator_test.cpp  load_test.cpp  load_utils_test.cpp  test_utilities.h  util_test.cpp
